Esperemos estar tudo bem :) (c/ comments do Alex)

--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -7582,17 +7582,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "\n",
-    "### **TESTAR: Alex**\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -7732,39 +7721,34 @@
    "source": [
     "<center><img src=\"./img/PROFILEPlan_4.1.png\" width=\"700\"></center><br>\n",
     "\n",
-    "<center><b>Image 3 | </b> Profile of the Query 4.1 Before and After Optimization.</center><br><br>\n",
+    "<center><b>Image 3 | </b> Profile of the Query 4.1 Before and After Optimization.</center><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Optimization Analysis of Query 4.1**\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
+    "The optimization of query 4.1, which finds the 5 strongest beers by ABV score, shows a clear performance improvement when using the `PROFILE` command in Neo4j Browser.\n",
     "\n",
-    "#### **COMENTÁRIO ALEX**\n",
+    "**Before Optimization:** \n",
+    "- The \"before\" plan, without an index on `b.abv`, performed the following:\n",
+    "  - Scanned all **358,869 BEERS nodes** using `NodeByLabelScan`.\n",
+    "  - Filtered **320,072 rows** with **358,869 DbHits** (database hits, representing the number of times the database was accessed).\n",
+    "  - Sorted the results using **88MB of memory**, totaling **717,764 DbHits**.\n",
     "\n",
-    "</div>\n",
+    "**After Optimization:** \n",
+    "- After creating the index with `CREATE INDEX FOR (b:BEERS) ON (b.abv)`, the \"after\" plan utilized `NodeIndexSeekByRange`, resulting in:\n",
+    "  - Reduced **DbHits to just 26** by directly fetching the top 5 rows in sorted order.\n",
     "\n",
-    "---\n",
+    "**Performance Improvement:** \n",
+    "- This reduction in DbHits—over **99%**—indicates fewer database accesses, leading to faster query execution.\n",
+    "- The impact of indexes on query performance is detailed in Neo4j’s documentation on indexing for search performance (Source: [https://neo4j.com/docs/cypher-manual/current/indexes/search-performance-indexes/using-indexes/#composite-indexes-property-order](https://neo4j.com/docs/cypher-manual/current/indexes/search-performance-indexes/using-indexes/#composite-indexes-property-order)).\n",
     "\n",
-    "\n",
-    "\n",
-    "#### **Analysis of Query Optimization for Finding Strongest Beers**\n",
-    "\n",
-    "This showcases the impact of indexing and filtering on the performance of a query to find the strongest beers by ABV.\n",
-    "\n",
-    "**Before Optimization:**\n",
-    "\n",
-    "*   The execution plan involves scanning the entire graph to filter down and to order the results of beers\n",
-    "*   The operation to get the first 5 lines was not efficient.\n",
-    "\n",
-    "**Optimization Steps:**\n",
-    "\n",
-    "1.  **Index Creation:**  Indexes were created on `abv` property of `BEERS` nodes. This directly addresses the filtering operations by providing indexed lookups.\n",
-    "\n",
-    "2.  **Query Optimization:** The query was rewritten to include the filter condition `WHERE b.abv > 0 AND b.abv <= 67.5 AND b.abv IS NOT NULL` directly in the initial `MATCH` pattern.\n",
-    "\n",
-    "**After Optimization:**\n",
-    "\n",
-    "*   The execution plan utilizes more index-based operations, significantly reducing the number of nodes that needed to be expanded to get the desired output\n",
-    "*    The EstimatedRows indicator went down from 5 rows to 0, improving the speed and efficent of the query\n",
-    "\n",
-    "**Conclusion:** The addition of indexes and rewrite of the original query improved performance. By the creation of indexes the database queries where more quick."
+    "- Performance metrics from the Python script show:\n",
+    "  - **ExecutionTimeMs**: Decreased from **39ms** to **35ms** (time to first result).\n",
+    "  - **TotalExecutionTimeMs**: Dropped from **1967ms** to **4ms** (total query time)."
    ]
   },
   {
@@ -7936,39 +7920,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### **Optimization Analysis of Query 4.2**\n",
+    "\n",
+    "The optimization of query 4.2, which finds the top 5 distinct beer styles with the highest average `smell + feel` score for user 'kylehay2004', shows a performance improvement when using the `PROFILE` command in Neo4j Browser."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<center><img src=\"./img/PROFILEPlan_4.2.png\" width=\"700\"></center><br>\n",
     "\n",
-    "<center><b>Image 4 | </b> Profile of the Query 4.2 Before and After Optimization.</center><br><br>\n",
+    "<center><b>Image 4 | </b> Profile of the Query 4.2 Before and After Optimization.</center><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Before Optimization:** \n",
+    "- The \"before\" plan, without indexes on `r.smell` and `r.feel`, performed the following:\n",
+    "  - Used `NodeIndexSeek` on `USER(name)`, fetching 1 row with **2 DbHits**.\n",
+    "  - Expanded `[u]-[:RATED]->(b)` to **3338 rows** with **3338 DbHits**.\n",
+    "  - Filtered rows where `r.smell IS NOT NULL AND r.feel IS NOT NULL`, incurring **8006 DbHits** and processing **2319 rows**.\n",
+    "  - Aggregated with `EagerAggregation`, adding **2319 DbHits**, totaling **22,576 DbHits**.\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
+    "**After Optimization:** \n",
+    "- After creating indexes with `CREATE INDEX FOR ()-[r:RATED]-() ON (r.smell)` and `CREATE INDEX FOR ()-[r:RATED]-() ON (r.feel)`, the \"after\" plan showed:\n",
+    "  - Same `NodeIndexSeek` and `Expand` steps, but `EagerAggregation` reduced to **0 DbHits** due to pre-fetching properties.\n",
+    "  - Total **DbHits remained at 22,576**, as the indexes were not used for `IS NOT NULL` checks.\n",
     "\n",
-    "#### **COMENTÁRIO ALEX**\n",
+    "**Reasons for No DbHits Improvement:**\n",
+    "- The `RATED(smell)` and `RATED(feel)` indexes were in the `POPULATING` state (4.4% complete), preventing Neo4j from using them.\n",
+    "- Neo4j does not support index usage for `IS NOT NULL` checks on relationship properties, so the `Filter` step’s **8006 DbHits** persisted.\n",
+    "- The `USER(name)` index reduced initial DbHits (123,936 → 2), but this was offset by unchanged subsequent steps.\n",
     "\n",
-    "</div>\n",
+    "**Performance Improvement:** \n",
+    "- Despite no change in total DbHits, runtime improved due to aggregation efficiency.\n",
+    "- Performance metrics from the Python script show:\n",
+    "  - **ExecutionTimeMs**: Increased from **50ms** to **91ms** (time to first result). \n",
+    "    - Possible reason: Before optimization, the query ran in about 50ms—likely because previous queries had already loaded the USER, RATED, BEERS, and STYLE data into the cache. When we cleared the cache using CALL db.clearQueryCaches(), the next run started with a \"cold\" cache, meaning it had to pull data from disk or load it into memory for the first row. Interestingly, after that initial overhead, the total execution time dropped to 20ms, which shows that once the cache started warming up during streaming, the query ran much more efficiently.\n",
     "\n",
-    "#### **Analysis of Query Optimization for Top Beer Styles by Smell + Feel**\n",
-    "\n",
-    "The execution plans show a significant improvement after optimization, primarily through the addition of indexes. Here's a breakdown:\n",
-    "\n",
-    "**Before Optimization:**\n",
-    "\n",
-    "*   The query plan involves multiple `Expand(All)` operations (likely traversing relationship connections), indicating a full scan of related nodes to identify the relevant `REVIEWS`, `BEERS` and `STYLE` relationships.\n",
-    "*   The total `DbHits` are not visible on the image. This metric reflects the number of direct accesses to the database storage. A higher number indicates less efficient use of indexes and more disk I/O.\n",
-    "*   The high total memory used also suggests inneficiencies in the process.\n",
-    "\n",
-    "**Optimization Steps:**\n",
-    "\n",
-    "1.  **Index Creation:**  Indexes were created on `name` property of `USER` and `STYLE` nodes and the  `smell` and `feel` properties of the `REVIEWS` nodes. This directly addresses the filtering operations by providing indexed lookups.\n",
-    "\n",
-    "2.  **Query Optimization:** The query was rewritten to include the filter condition `WHERE r.smell IS NOT NULL AND r.feel IS NOT NULL` directly in the initial `MATCH` pattern. By merging the nodes in a more efficient and direct approach.\n",
-    "\n",
-    "**After Optimization:**\n",
-    "\n",
-    "*   The execution plan utilizes more index-based operations such as `NodeIndexSeekByRange`, significantly reducing the number of nodes that needed to be expanded to get the desired output\n",
-    "*    The `DbHits` number were reduced\n",
-    "*    Used 54kb instead of the original 120kb\n",
-    "\n",
-    "**Conclusion:** The addition of indexes and rewrite of the original query improved performance. By the creation of indexes the database queries where more quick."
+    "  - **TotalExecutionTimeMs**: Dropped from **142ms** to **20ms** (total query time)."
    ]
   },
   {
@@ -8033,8 +8026,9 @@
     "\n",
     "#### **Node Similarity Algorithm** (https://neo4j.com/docs/graph-data-science/current/algorithms/node-similarity/)\n",
     "\n",
-    "- The Node Similarity algorithm compares a set of nodes based on the nodes they are connected to using one of different metrics: Jaccard metric, Overlap coefficient and the Cosine Similarity score. In our case we are using the default metric: the Jaccard Metric.\n",
-    "    - $J(A,B) = \\frac{|A \\cap B|}{|A \\cup B|} = \\frac{|A \\cap B|}{|A| + |B| - |A \\cap B|}$\n",
+    "- The Node Similarity algorithm compares a set of nodes based on the nodes they are connected to using one of different metrics: Jaccard metric, Overlap coefficient and the Cosine Similarity score. In our case we are using the default metric: the Jaccard Metric:\n",
+    "  \n",
+    "$$J(A,B) = \\frac{|A \\cap B|}{|A \\cup B|} = \\frac{|A \\cap B|}{|A| + |B| - |A \\cap B|}$$\n",
     "\n",
     "- In the context of our problem and to evaluate the similarity score between two contries, the algorithm will check the number of shared top 5 beer styles produced, weighting the similarity score based on the production volume of each style\n",
     "\n",
