--- a/Group5_BDMM_HW1.ipynb
+++ b/Group5_BDMM_HW1.ipynb
@@ -626,23 +626,23 @@
     "\n",
     "|     |   **Node Labels**  | **Properties**                                                     |**Total number of nodes**|\n",
     "|:---:|:------------------:|:-------------------------------------------------------------------|:-----------------------:|\n",
-    "|**1**| `COUNTRIES`        | name                                                               |400                      |\n",
-    "|**2**| `CITIES`           | name                                                               |23330                    |\n",
-    "|**3**| `BREWERIES`        | notes, types, id, name, state                                      |100694                   |\n",
-    "|**4**| `BEERS`            | notes, abv, name, state, id, retired, availability, brewery_id     |417746                   |\n",
-    "|**5**| `REVIEWS`          | text, smell, look, taste, feel, overall, beer_id, id, date, score  |2549271                  | \n",
-    "|**6**| `STYLE`            | name                                                               |113                      |\n",
-    "|**7**| `USER`             | name                                                               |123935                   |\n",
+    "|**1**| `COUNTRIES`        | name                                                               |$400$                    |\n",
+    "|**2**| `CITIES`           | name                                                               |$23\\;330$                |\n",
+    "|**3**| `BREWERIES`        | notes, types, id, name, state                                      |$100\\;694$               |\n",
+    "|**4**| `BEERS`            | notes, abv, name, state, id, retired, availability, brewery_id     |$417\\;746$               |\n",
+    "|**5**| `REVIEWS`          | text, smell, look, taste, feel, overall, beer_id, id, date, score  |$2\\;549\\;252$            | \n",
+    "|**6**| `STYLE`            | name                                                               |$113$                    |\n",
+    "|**7**| `USER`             | name                                                               |$123\\;935$               |\n",
     "\n",
     "<br><br>\n",
     "\n",
     "|     |  **Relationship Types**  | **Total number of relationships** |\n",
     "|:---:|:------------------------:|:---------------------------------:|\n",
-    "|**1**| `POSTED`                 |2538044                            |\n",
-    "|**2**| `REVIEWED`               |2537991                            |\n",
-    "|**3**| `BREWED`                 |358873                             |\n",
-    "|**4**| `HAS_STYLE`              |358873                             |\n",
-    "|**5**| `IN`                     |62424                              |\n",
+    "|**1**| `POSTED`                 |$2\\;538\\;044$                      |\n",
+    "|**2**| `REVIEWED`               |$2\\;537\\;991$                      |\n",
+    "|**3**| `BREWED`                 |$358\\;873$                         |\n",
+    "|**4**| `HAS_STYLE`              |$358\\;873$                         |\n",
+    "|**5**| `IN`                     |$62\\;424$                          |\n",
     "\n",
     "\n",
     "\n",
@@ -1394,21 +1394,21 @@
     "\n",
     "**BEERS**\n",
     "- **`abv`**: According to [Hops & Hopes (2025)](https://www.hopsandhopes.nl/en/beers/snake-venom) the world's strongest beer is **Snake Venom** with **67.5% ABV**. We can see that the **maximum** value in the database is **100**, so we will need to verify the beers with more than **67.5% ABV**.\n",
-    "- **`availability`** have **$20$** different values. We will check what are the possible values.\n",
+    "- **`availability`** have **$20$** different values. \n",
     "- **`brewery_id`**: In total we have **$417\\;746$** brewery_ids, but **$16\\;569$** distinct brewery_ids. It is possible that some breweries have more than one beer.\n",
     "- **`id`**: In total we have **$417\\;746$** ids, but **$358\\;873$** distinct ids. We need to check the duplicates.\n",
     "- **`name`**: In total we have **$417\\;746$** names, but **$298\\;567$** distinct names. It is possible that some beers have the same name.\n",
     "- **`notes`**: In total we have **$417\\;746$** notes, but **$48\\;313$** distinct notes. Same as the **`name`** property, it is possible that some beers have the same notes.\n",
     "- **`retired`** have **$2$** different values - **`True`** and **`False`**.\n",
-    "- **`state`** have **$68$** different values. We will check what are the possible values.\n",
+    "- **`state`** have **$68$** different values. \n",
     "\n",
     "**BREWERIES**\n",
     "\n",
-    "- **`id`**: In total we have **$100\\;694$** ids, but **$50\\;347$** distinct ids. As in **`BEERS`**, it is possible that some breweries have more than one beer.\n",
+    "- **`id`**: In total we have **$100\\;694$** ids, but **$50\\;347$** distinct ids. As in **`BEERS.id`**, we need to check the duplicates.\n",
     "- **`name`**: In total we have **$100\\;694$** names, but **$45\\;245$** distinct names. We need to check the duplicates.\n",
     "- **`notes`**: In total we have **$100\\;694$** notes, but **$3\\;271$** distinct notes. Same as the **`name`** property, it is possible that some breweries have the same notes.\n",
-    "- **`state`** have **$68$** different values (the same as in **`BEERS`**). We will check what are the possible values.\n",
-    "- **`types`** have **$30$** different values. We will check what are the possible values.\n",
+    "- **`state`** have **$68$** different values (the same as in **`BEERS`**). \n",
+    "- **`types`** have **$30$** different values. \n",
     "\n",
     "**CITIES**\n",
     "\n",
@@ -4055,6 +4055,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> After deleting $58\\;873$ duplicate **`BEERS`** nodes, we decided to check if all the remaining $358\\;873$ nodes have relationships. As we can see from the query above, they do."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
@@ -4431,26 +4438,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8116"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2546160 - 2538044"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [
@@ -4809,7 +4796,7 @@
     "- **`Min_RelationshipCount`**:\n",
     "  - After removing duplicates, the `Min_RelationshipCount` increased for some node labels, indicating that some nodes with fewer properties were duplicates and have been removed.\n",
     "  - However, there are still `USER` nodes with no relationships (`Min_RelationshipCount = 0`). This suggests that while duplicates were addressed, some nodes remain unconnected in the graph.\n",
-    "  - The `Min_RelationshipCount` for `REVIEWS` should be **0** since **some orphan nodes remain**. However, it shows a `Min_RelationshipCount` of 1, indicating that 19 orphan nodes were not deleted. We need to investigate the cause of their persistence."
+    "  - The `Min_RelationshipCount` for `REVIEWS` should be **0** since **some orphan nodes remain**. However, it shows a `Min_RelationshipCount` of **1**, indicating that 19 orphan nodes were deleted. We need to investigate the cause of their inconsistency."
    ]
   },
   {
@@ -5823,7 +5810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5867,7 +5854,7 @@
     }
    ],
    "source": [
-    "# Confirm that missing values have been removed\n",
+    "# Count the remaining missing values for each property after cleanup and return an example node\n",
     "for node_type, properties in missing_values.items():\n",
     "    for property in properties:\n",
     "        query = f\"\"\"\n",
@@ -5879,6 +5866,14 @@
     "        result = execute_read(driver, query)\n",
     "        print(f\"Node Type: {node_type}, Property: {property}, Missing Count: {result[0]['missingCount']}\")\n",
     "    print(f\"Example Node: {result[0]['exampleNode']} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- As we can see from the output above all the properties with missing values that we removed in the removal step are still present in the nodes. ***Does this mean that our process was unsuccessful?***\n",
+    "    - No because when remove from a node due to missing values, that property will no longer exist in that node. However, when we check for missing values in the property, it will still appear as \"missing\" because it no longer exists in those nodes."
    ]
   },
   {
@@ -5915,21 +5910,14 @@
     "In this section, we will change the schema of the database to make it more efficient and to better represent the relationships between the nodes. \n",
     "\n",
     "\n",
-    "**Considerations/Questions**:\n",
+    "**Questions**:\n",
     "\n",
-    "Based on the analysis of the database, we can make the following considerations:\n",
-    "- Each `CITY` is in a `COUNTRY`. [Because we have a `COUNTRY` node with a `CITY` relationship and `Min_RelationshipCount` = 1]\n",
-    "- Each `BREWERY` is in a `CITY`. [Because we have a `CITY` node with a `BREWERY` relationship and `Min_RelationshipCount` = 1]\n",
-    "  - Each `BREWERY.state` has the same values as `BEER.state`?\n",
-    "<br>\n",
-    "\n",
-    "- Each `BEER` is brewed by a unique `BREWERY`. [Because we have a `BREWERY` node with a `BEER` relationship and `Min_RelationshipCount` = 1]\n",
-    "- Each `REVIEW` is about a `BEER` and is written by a `USER`. [Because we have a `BEER` node with a `REVIEW` relationship and a `USER` node with a `REVIEW` relationship and `Min_RelationshipCount` = 1]\n",
-    "  - One `USER` can write multiple `REVIEWS`?                 \n",
-    "  - One `REVIEW` can be written by multiple `USER`?\n",
-    "  - One `REVIEW` can be about multiple `BEER`?\n",
-    "- Each `BEER` has a `STYLE`. [Because we have a `BEER` node with a `STYLE` relationship and `Min_RelationshipCount` = 1]\n",
-    "  - One `BEER` can have multiple `STYLE`?"
+    "Based on the analysis of the database, we still have some questions that need to be answered:\n",
+    "- One `USER` can write multiple `REVIEWS`?                 \n",
+    "- One `REVIEW` can be written by multiple `USER`?\n",
+    "- One `REVIEW` can be about multiple `BEER`?\n",
+    "- One `BEER` can have multiple `STYLE`?\n",
+    "- Each `BREWERY.state` has the same values as `BEER.state`?"
    ]
   },
   {
@@ -6797,9 +6785,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We considered the possibility of not only removing the **`state`** property</b> from **`BEERS`** but also removing it from **`BREWERIES`**, placing it as a property of the **`IN`** relationship that connects **`CITIES`** to **`COUNTRIES`**. \n",
+    "- We considered the possibility of removing the **`state`** property</b> from **`BEERS`** and also removing it from **`BREWERIES`**, placing it as a property of the **`IN`** relationship that connects **`CITIES`** to **`COUNTRIES`** (as we will check in the next queries). \n",
     "\n",
-    " - However, this alternative was not viable as it would result in a loss of information, since there are cities with the same name that belong to different countries, as can be seen in the example below. \n",
+    "  - However, this alternative was not viable as it would result in a loss of information, since there are cities with the same name that belong to different countries, as can be seen in the example below. \n",
     "\n",
     "  - Therefore, when trying to find the location of a **`BREWERY`**/**`BEER`**, it would not be possible to determine which of these two cases it would refer to.\n",
     "\n",
@@ -7007,7 +6995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The queries above verify if the property **`state`** of **`BEERS`** is also a property of **`BREWERIES`** and if **`BEERS`** have the same state as **`BREWERIES`** respectively. We have concluded that all **`BEERS`** share the same **`state`** as the **`BREWERIES`**."
+    "- The queries above verify if the property **`state`** of **`BEERS`** is also a property of **`BREWERIES`** and if **`BEERS`** have the same state as **`BREWERIES`** respectively. We have concluded that all **`BEERS`** share the same **`state`** as the **`BREWERIES`**, so we can remove the **`state`** property from the **`BEERS`** nodes."
    ]
   },
   {
@@ -7132,7 +7120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -7144,7 +7132,7 @@
     }
    ],
    "source": [
-    "# Just for clarification, rename the relationship between CITIES and COUNTRIES to BELONGS_TO and add the `state` property in the relationship\n",
+    "# Just for clarification, rename the relationship between CITIES and COUNTRIES to BELONGS_TO\n",
     "\n",
     "# Step 1: Count existing IN relationships between CITIES and COUNTRIES for verification \n",
     "query = \"\"\"\n",
@@ -7248,7 +7236,7 @@
     "<center><b>Image 2 | </b> Graph Schema After Cleaning</center><br><br>\n",
     "\n",
     "\n",
-    "- As we can see in the image above, we have a different schema after cleaning the database. We have fewer nodes and relationships, which will make the queries more efficient."
+    "- As we can see in the image above, we have a different schema after cleaning the database. We have fewer label ($1$), nodes ($+2.5M$) and relationships ($+2.5M$), which will make the queries more efficient."
    ]
   },
   {
@@ -7459,14 +7447,6 @@
     "print(\"\\033[1mThe country producing the most beer styles is:\\033[0m\", result[0][\"CountryName\"], \"with\", result[0][\"NumberOfStyles\"], \"styles.\")\n",
     "\n",
     "### The country producing the most beer styles is: US with 113 styles."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- For some reason, after the cleaning process, we have **$112$** distinct **`STYLE`**, instead of **$113$**. \n",
-    "    - Probably one of the styles was removed during the cleaning process, duo to the fact that **`STYLE.name`** is **missing** in the **`STYLE`** nodes."
    ]
   },
   {
@@ -7736,11 +7716,11 @@
     "- The \"before\" plan, without an index on `b.abv`, performed the following:\n",
     "  - Scanned all **358,869 BEERS nodes** using `NodeByLabelScan`.\n",
     "  - Filtered **320,072 rows** with **358,869 DbHits** (database hits, representing the number of times the database was accessed).\n",
-    "  - Sorted the results using **88MB of memory**, totaling **717,764 DbHits**.\n",
+    "  - Sorted the results using **88MB of memory**, totaling **717,739 DbHits**.\n",
     "\n",
     "**After Optimization:** \n",
     "- After creating the index with `CREATE INDEX FOR (b:BEERS) ON (b.abv)`, the \"after\" plan utilized `NodeIndexSeekByRange`, resulting in:\n",
-    "  - Reduced **DbHits to just 26** by directly fetching the top 5 rows in sorted order.\n",
+    "  - Reduced **DbHits to just 31** by directly fetching the top 5 rows in sorted order.\n",
     "\n",
     "**Performance Improvement:** \n",
     "- This reduction in DbHits—over **99%**—indicates fewer database accesses, leading to faster query execution.\n",
@@ -8004,7 +7984,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"color: #272727; background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(31, 133, 194); padding: 10px; border-radius: 10px;\">\n",
+    "<div class=\"alert alert-block alert\" style=\"background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(31, 133, 194); padding: 10px; border-radius: 10px;\">\n",
     "\n",
     "#### **Assumptions**:\n",
     "1. Considering the that the question asks for the two **`COUNTRIES`** that are the most similar in relation to their top five most produced beer **`STYLES`**, we decided to filter all **`COUNTRIES`** with fewer than 5 beer **`STYLES`**\n",
@@ -8816,7 +8796,7 @@
    "source": [
     "### **5.2. 🍺 Which beer is the most popular when considering the number of users who reviewed it?**\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\" style=\"color: #272727; background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(243, 202, 0); padding: 10px; border-radius: 10px;\">\n",
+    "<div class=\"alert alert-block alert\" style=\"background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(243, 202, 0); padding: 10px; border-radius: 10px;\">\n",
     "\n",
     "#### **Query Organization**\n",
     "\n",
@@ -8986,7 +8966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Empty list, indicating no multiple reviews or they were deduplicated."
+    "- The result confirms that no user has rated the same beer multiple times, either because it never happened or duplicates were handled earlier."
    ]
   },
   {
@@ -9200,7 +9180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"color: black; background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(243, 202, 0); padding: 10px; border-radius: 10px;\">\n",
+    "<div class=\"alert alert-block alert\" style=\"background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(243, 202, 0); padding: 10px; border-radius: 10px;\">\n",
     "\n",
     "\n",
     "#### **Comments | Interpretation and Discrepancies**\n",
