--- a/Homework1_Neo4J_TheBeerProject/Versões/Group5_BDMM_HW1_Filipa.ipynb
+++ b/Homework1_Neo4J_TheBeerProject/Versões/Group5_BDMM_HW1_Filipa.ipynb
@@ -7918,30 +7918,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "**Before Optimization:** \n",
     "- The \"before\" plan, without indexes on `r.smell` and `r.feel`, performed the following:\n",
-    "  - Used `NodeIndexSeek` on `USER(name)`, fetching 1 row with **2 DbHits**.\n",
-    "  - Expanded `[u]-[:RATED]->(b)` to **3338 rows** with **3338 DbHits**.\n",
-    "  - Filtered rows where `r.smell IS NOT NULL AND r.feel IS NOT NULL`, incurring **8006 DbHits** and processing **2319 rows**.\n",
-    "  - Aggregated with `EagerAggregation`, adding **2319 DbHits**, totaling **22,576 DbHits**.\n",
+    "  - Used `NodebyLabelScan` on `USER`, fetching $123\\;935$ row with **$123 \\; 936$ DbHits**\n",
+    "  - `Filter` `User.name`, fetching $1$ row with **$123 \\; 935$ DbHits**.\n",
+    "  - Expanded `[u]-[:RATED]->(b)` to $3\\;368$ rows with **$3\\;369$ DbHits**.\n",
+    "  - Filtered rows where `r.smell IS NOT NULL AND r.feel IS NOT NULL`, incurring **$8\\;006$ DbHits** and processing $2\\;319$ rows.\n",
+    "  - Filter by **`STYLE`**, adding **2319 DbHits** and return $2\\;319$ rows.\n",
+    "  - `Projection`, adding **2319 DbHits** \n",
+    "  - The total **DbHits** used are **$268\\;522$**\n",
     "\n",
     "**After Optimization:** \n",
     "- After creating indexes with `CREATE INDEX FOR ()-[r:RATED]-() ON (r.smell)` and `CREATE INDEX FOR ()-[r:RATED]-() ON (r.feel)`, the \"after\" plan showed:\n",
-    "  - Same `NodeIndexSeek` and `Expand` steps, but `EagerAggregation` reduced to **0 DbHits** due to pre-fetching properties.\n",
-    "  - Total **DbHits remained at 22,576**, as the indexes were not used for `IS NOT NULL` checks.\n",
-    "\n",
-    "**Reasons for No DbHits Improvement:**\n",
-    "- The `RATED(smell)` and `RATED(feel)` indexes were in the `POPULATING` state (4.4% complete), preventing Neo4j from using them.\n",
-    "- Neo4j does not support index usage for `IS NOT NULL` checks on relationship properties, so the `Filter` step’s **8006 DbHits** persisted.\n",
-    "- The `USER(name)` index reduced initial DbHits (123,936 → 2), but this was offset by unchanged subsequent steps.\n",
+    "  - Reduced `NodeIndexSeek` on `USER`, fetching $1$ row with **$2$ DbHits** (123,936 → 2)\n",
+    "  - Same `Filter`, `Expand` and `Projection` as *before optimization*.\n",
+    "  - Total **DbHits remained at $20\\;653$**.\n",
     "\n",
     "**Performance Improvement:** \n",
-    "- Despite no change in total DbHits, runtime improved due to aggregation efficiency.\n",
+    "- This reduction in DbHits—over **92%**—indicates fewer database accesses, leading to faster query execution.\n",
     "- Performance metrics from the Python script show:\n",
     "  - **ExecutionTimeMs**: Increased from **50ms** to **91ms** (time to first result). \n",
-    "    - Possible reason: Before optimization, the query ran in about 50ms—likely because previous queries had already loaded the USER, RATED, BEERS, and STYLE data into the cache. When we cleared the cache using CALL db.clearQueryCaches(), the next run started with a \"cold\" cache, meaning it had to pull data from disk or load it into memory for the first row. Interestingly, after that initial overhead, the total execution time dropped to 20ms, which shows that once the cache started warming up during streaming, the query ran much more efficiently.\n",
+    "    - Possible reason: Before optimization, the query ran in about 50ms—likely because previous queries had already loaded the **`USER`**, **`RATED`**, **`BEERS`**, and **`STYLE`** data into the cache. When we cleared the cache using ```CALL db.clearQueryCaches()```, the next run started with a \"cold\" cache, meaning it had to pull data from disk or load it into memory for the first row. Interestingly, after that initial overhead, the total execution time dropped to 20ms, which shows that once the cache started warming up during streaming, the query ran much more efficiently.\n",
     "\n",
-    "  - **TotalExecutionTimeMs**: Dropped from **142ms** to **20ms** (total query time)."
+    "  - **TotalExecutionTimeMs**: Dropped from **142ms** to **20ms** (total query time). ([Source](https://stackoverflow.com/questions/60839183/what-is-difference-between-result-available-after-and-result-consumed-after))\n",
+    "\n",
+    "\n",
+    "**Note:** `EagerAggregation`, `Top`, and `ProduceResults` have the same value before and after the optimization because they are doing the same operation using the data already in memory."
    ]
   },
   {
@@ -8004,7 +8009,7 @@
     "4. **Similarity Algorithm**: Runs node similarity algorithm on **`CountryBeerStyleSimilarityGraph`** to find the two most similar countries in regards to their top 5 most produced beers \n",
     "5. All these steps are available in the section **'Node Similarity Algorithm'** below\n",
     "\n",
-    "#### **Node Similarity Algorithm** (https://neo4j.com/docs/graph-data-science/current/algorithms/node-similarity/)\n",
+    "#### [**Node Similarity Algorithm**](https://neo4j.com/docs/graph-data-science/current/algorithms/node-similarity/)\n",
     "\n",
     "- The Node Similarity algorithm compares a set of nodes based on the nodes they are connected to using one of different metrics: Jaccard metric, Overlap coefficient and the Cosine Similarity score. In our case we are using the default metric: the Jaccard Metric:\n",
     "  \n",
